include $(top_srcdir)/Makefile.decl

NULL =

SUBDIRS = \
  fsosystem \
  fsobasics \
  fsotransport \
  fsoresource \
  fsoframework \
  vapi \
  tests \
  $(NULL)

EXTRA_DIST += \
  MAINTAINERS \
  3rdparty/linux/gsmmux.h \
  $(NULL)

MAINTAINERCLEANFILES = \
  aclocal.m4 compile config.guess config.sub \
  configure depcomp install-sh ltmain.sh     \
  Makefile.in missing config.h.in            \
  mkinstalldirs *~ \
  $(NULL)
